updated all files

--- a/index.html
+++ b/index.html
@@ -1,41 +1,74 @@
-  
-<!DOCTYPE html><!--nothing below this line changes!-->
-<html lang ="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Eric Reviews</title>
 	<meta name="viewport" content="width=device-width">
-	<link href="style.css" rel="stylesheet" type="text/css" />
+	<title>Eric Reviews</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-	<!--this contains the big letters you see on the page, clickable by the way i dont know why-->
+<section id="home"></section>
 <body>
 	<header>
-    <div class="pageContainer">
-		<h1><a href="index.html">Eric Reviews</a></h1>
-		</div>
-	</header>
-	<main> 	<!--here is where the image goes inside its own container-->
-    <div class="imageContainer">
-		<img src="images/profilepic.jpg" alt="broken image"/>
-    </div>
-    <article>	<!--article should be divided in two and inside seperate containers-->
-      <div class="textContainer">
-        <h2>Intro</h2>
-        <p>My name is Eric and I'm currently sharpening my coding skills and writing HTML, and CSS to be better at software developement! I currently live in Royal Oak, Michigan.</p>
-      </div>
-      <div class="textContainer">
-        <h2>About me</h2>
-        <p>My passion for web developement comes from me wanting to create something from nothing and have that certain thing do something useful! I simply enjoy building things and seeing how they work. Some other things I enjoy doing would be live streaming video game playthroughs because you know those are fun to watch! I have a musical background so I enjoy listening to music and also a hobby of mine is creating music in my band as well.  My ultimate goal is to be on a team of great people and develop exciting video games!</p>
+		<div class="wrapper">
+			<h1>Eric Reviews</h1>
+        <nav>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            </ul>
+            </nav>
+          </div>
+  </header>
+	<main>
+		<div class="wrapper">
+			<img src="images/profilepic.jpg" alt="broken image">
+            <div class="gap-sm"></div>
+            <h2><b>Introductions..</b></h2>
+            <p>My name is Eric and I currently live in Royal Oak, Michigan. I am sharpening my coding skills and writing HTML and CSS to be the best software developer I can be! </p>
+<div class="gap-sm"></div>
+<hr>
+<div class="gap-sm"></div>
+            <section id="about">
+            <h2><b>About Me</b></h2>
+            </section>
+            <p>My passion for web developement comes from me wanting to create something from nothing and have that certain software do something useful! So far, I have learned the basics of Javascript, HTML and CSS. I simply enjoy building things and seeing how they work. Some things I enjoy doing would be live streaming video game playthroughs because you know those are fun to watch! I have a musical background so I enjoy listening to music and also a hobby of mine is creating music in my band as well. My ultimate goal and my passion is to be on a team of great people and develop exciting video games!</p>
+            <div class="gap-sm"></div>
+            <hr>
+            <div class="gap-sm"></div>
+            <section id="portfolio">
+            <h2><b>My Work</b></h2>
+            </section>
+            <p>The Portfolio section</p>
+            <p>Links go here</p>
+            <div class="gap-sm"></div>
+            <hr>
+            <div class="gap-sm"></div>  
+            <h2><b>What I can do for you!</b></h2>
+            <ul>
+              <li>Write simple For Loop that can sort through a complex array of objects</li>
+              <li>Can create a countdown timer function</li>
+              <li>I have also created an empty email form which you can use to get a hold of me, just click the contact link in the nav bar and there you go!</li>
+              </ul>
+<div class="gap-sm"></div>
+            <hr>
+            <div class="gap-sm"></div>
+            <section id="contact">
+            <h2><b>Contact Me</b></h2>
+            </section>
+                <p>ericb900@outlook.com</p>
+                <p>click links below for my github and linkedIn</p>
+                <h3><a href="https://github.com/eric9001">GitHub</a></h3
+                ><h3><a href="https://www.linkedin.com/in/eric-booth-6a73171b2/">LinkedIn</a></h3>
         </div>
-      </article>
-  </main>
-  <footer><!--two links and an email bottom left corner-->
-    <h3>Contact Info</h3>  
-    <p>ericb900@outlook.com</p>
-    <p>click links below for my github and linkedIn</p>
-	  <h3><a href="https://github.com/eric9001">GitHub</a></h3>
-	  <h3><a href="https://www.linkedin.com/in/eric-booth-6a73171b2/">LinkedIn</a></h3>
+<div class="gap-lg"></div>
+    </main>
+  <footer>
+        <div class="wrapper">
+                     <div class="gap-footer"></div>
+                  </div>
     </footer>
-    <script src="script.js"></script>
-  </body>
+<script src="script.js"></script>
+</body>
 </html>
