--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<heading>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Eric Reviews</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
+</heading>
 <section id="home"></section>
 <body>
 	<header>
