--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>Eric Reviews</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<title>Eric Reviews</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<section id="index.html"></section>
 <body>
-	<header>
-		<div class="wrapper">
-			<h1>Eric Reviews</h1>
+<header>
+<div class="wrapper">
+<h1>Eric Reviews</h1>
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -20,18 +19,17 @@
             </ul>
             </nav>
             </div>
-            </header>
-
-	<main>
-		<div class="wrapper">
+   </header>
+<main>
+<div class="wrapper">
       <form action="mailto:ericb900@outlook.com" method="POST">
         <div class="formField">
         <label for="fullname">Fullname</label>
         <input type="text" id="fullname" name="fullname">
         </div>
          <div class="formField">
-          <label for="fullname">Phone</label>
-        <input type="text" id="fullname" name="fullname">
+          <label for="phone">Phone</label>
+        <input type="text" id="phone" name="phone">
         </div>
          <div class="formField">
         <label for="contact">Contact address</label>
