--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>Eric Reviews</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<title>Eric Reviews</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<section id="home"></section>
 <body>
-	<header>
-		<div class="wrapper">
-			<h1>Eric Reviews</h1>
+<header>
+<div class="wrapper">
+<h1>Eric Reviews</h1>
         <nav>
           <ul>
             <li><a href="#home">Home</a></li>
@@ -21,13 +20,15 @@
             </nav>
           </div>
   </header>
-	<main>
-		<div class="wrapper">
-			<img src="images/profilepic.jpg" alt="broken image">
+  <main>
+<div class="wrapper">
+<img src="images/profilepic.jpg" alt="broken image">
             <div class="gap-sm"></div>
-            <h2><b>Introductions..</b></h2>
-            <p>My name is Eric and I currently live in Royal Oak, Michigan. I am sharpening my coding skills and writing HTML and CSS to be the best software developer I can be! </p>
-<div class="gap-sm"></div>
+            <section id="home">
+              <h2><b>Introductions..</b></h2>
+              <p>My name is Eric and I currently live in Royal Oak, Michigan. I am sharpening my coding skills and writing HTML and CSS to be the best software developer I can be! </p>
+            </section>
+    <div class="gap-sm"></div>
 <hr>
 <div class="gap-sm"></div>
             <section id="about">
